Add Contact page

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
+          <li><a class="nav-link" href="#contact">Contact</a></li>
           <!-- <li><a class="nav-link" href="#resume">Resume</a></li> -->
           <!-- <li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
         </ul>
@@ -328,6 +329,49 @@
 
     </div>
   </section> --><!-- End Portfolio Section -->
+
+  <!-- ======= Contact Section ======= -->
+  <section id="contact" class="contact">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Contact</h2>
+      </div>
+
+      <div class="row mt-2">
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-share-alt"></i>
+            <h3>Social Profiles</h3>
+            <div class="social-links">
+              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="#" class="substack"><i class="bi bi-substack"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-envelope"></i>
+            <h3>Email Me</h3>
+            <p>elsha@genesiaventures.com</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="php-email-form mt-4">
+        <div class="section-title">
+          <h2>Submit your pitch deck</h2>
+        </div>
+
+        <div class="row mt-2">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_uipjtIfjOTAHxluxQGS_8o8TVSPc0pEl3p4y6c3exJN_4Q/viewform?embedded=true" width="640" height="2894" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
+      </div>
+      
+    </div>
+  </section> <!-- End Contact Section -->
 
   <div class="credits">
     <!-- All the links in the footer should remain intact. -->
