--- a/index.html
+++ b/index.html
@@ -381,6 +381,17 @@
     <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
   </div>
 
+  <!-- Footer Section -->
+<footer id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <p>&copy; 2023 Elsha's Page. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
