--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Learn more about me</p>
+        <!-- <p>Learn more about me</p> -->
       </div>
 
       <div class="row">
@@ -88,7 +88,13 @@
           <p class="fst-italic">
             Passionate about new technology that make lives better.
           </p>
-          <div class="row">
+          <p>
+            I'm a Venture Capitalist at <a href="https://www.genesiaventures.com/" target=”_blank” class="link-45deg">Genesia Ventures</a> based in Indonesia, investing in early stage tech companies.
+          </p>
+          <p>
+            Some things I enjoy doing: building LEGO (especially the Creator Expert and Ideas sets), learning new things (more recently this includes cybersecurity, poker), arts and crafts.
+          </p>
+          <!-- <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://genesiaventures.com/</span></li>
@@ -96,7 +102,7 @@
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Jakarta, Indonesia</span></li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
